fdo#35965: Mark all formula cells dirty when appending a new sheet.

Just like we do when inserting a sheet in the middle.